manifests/django-app/apache/apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 4  # Number of Apache pods
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest # Official Apache HTTP Server image
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
          limits:
            cpu: 100m
        volumeMounts:
        - name: html-content
          mountPath: /home/ubuntu/kubernetes-practice/manifests/django-app/htdocs # Mount custom HTML content here
      volumes:
      - name: html-content
        configMap:
          name: apache-html-config
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  labels:
    app: apache
spec:
  selector:
    app: apache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
